@@ -10,6 +10,7 @@
 #include "SimpleTcpAcceptor.h"
 #include "SimpleTcpDataLink.h"
 #include "SimpleTcpSendStrategy.h"
+#include "SimpleTcpReceiveStrategy.h"
 #include "dds/DCPS/transport/framework/NetworkAddress.h"
 #include "ace/SOCK_Connector.h"
 #include "dds/DCPS/transport/framework/EntryExit.h"
