@@ -11,13 +11,14 @@
 #define OPENDDS_DCPS_SIMPLETCPRECEIVESTRATEGY_H
 
 #include "SimpleTcpConnection_rch.h"
-#include "SimpleTcpConnection.h"
 #include "SimpleTcpDataLink_rch.h"
 #include "dds/DCPS/transport/framework/TransportReceiveStrategy.h"
 #include "dds/DCPS/transport/framework/TransportReactorTask_rch.h"
 
 namespace OpenDDS {
 namespace DCPS {
+
+class SimpleTcpConnection;
 
 class SimpleTcpReceiveStrategy : public TransportReceiveStrategy {
 public:
