@@ -11,7 +11,6 @@
 #define OPENDDS_DCPS_SIMPLETCPSENDSTRATEGY_H
 
 #include "SimpleTcpConnection_rch.h"
-#include "SimpleTcpConnection.h"
 #include "SimpleTcpDataLink_rch.h"
 #include "dds/DCPS/transport/framework/TransportSendStrategy.h"
 #include "dds/DCPS/transport/framework/TransportReactorTask_rch.h"
@@ -19,6 +18,7 @@
 namespace OpenDDS {
 namespace DCPS {
 
+class SimpleTcpConnection;
 class SimpleTcpConfiguration;
 class SimpleTcpSynchResource;
 
