@@ -1,3 +1,14 @@
+Tue Jan  5 16:01:24 UTC 2010  Yan Dai  <dai_y@ociweb.com>
+
+        * dds/DCPS/transport/simpleTCP/SimpleTcpConnection.h:
+        * dds/DCPS/transport/simpleTCP/SimpleTcpConnection.inl:
+        * dds/DCPS/transport/simpleTCP/SimpleTcpReceiveStrategy.h:
+        * dds/DCPS/transport/simpleTCP/SimpleTcpReceiveStrategy.cpp:
+        * dds/DCPS/transport/simpleTCP/SimpleTcpSendStrategy.h:
+
+          Adjusted the includes to fix compilation errors on solaris 
+          builds.
+          
 Tue Jan  5 00:10:27 UTC 2010  Steven Stallion  <stallions@ociweb.com>
 
         * bin/PerlDDS/Cross_Sync.pm:
